# video_steganography

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
assets/: Untitled_steg.avi  v1_stego.mkv
gui/: __init__.py  decode_tab.py  encode_tab.py  main_window.py
steganography/: __init__.py  dct.py  lsb.py  video_in_video.py
tests/: test_dct.py  test_lsb.py
utils/: __init__.py  error_handling.py  video_handler.py
